# confluence-bidir-sync

./: .env.example  .env.test.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  mypy.ini  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
config/: example.yaml
config/.confluence-sync/: config.yaml
docs/architecture/: 01-intro.md  02-constraints.md  03-context.md  04-strategy.md  05-building-blocks.md  06-runtime.md  07-deployment.md  09-adr-summary.md  10-quality.md  11-risks.md  12-glossary.md
docs/product/: PRD.md
scripts/: cleanup_all_test_pages.py
src/cli/: __init__.py  ancestor_resolver.py  baseline_manager.py  change_detector.py  config.py  conflict_resolver.py  deletion_handler.py  errors.py  init_command.py  main.py  models.py  move_handler.py  output.py  sync_command.py
src/confluence_client/: __init__.py  api_wrapper.py  auth.py  errors.py  retry_logic.py
src/content_converter/: __init__.py  markdown_converter.py
src/file_mapper/: README.md  __init__.py  config_loader.py  errors.py  file_mapper.py  filesafe_converter.py  frontmatter_handler.py  hierarchy_builder.py  models.py
src/git_integration/: __init__.py  conflict_detector.py  errors.py  git_repository.py  merge_orchestrator.py  merge_tool.py  models.py  table_merge.py  xhtml_cache.py
src/models/: __init__.py  confluence_page.py  conversion_result.py
src/page_operations/: __init__.py  adf_editor.py  adf_models.py  adf_parser.py  content_parser.py  diff_analyzer.py  macro_preserver.py  models.py  page_operations.py  surgical_editor.py
tests/: conftest.py
tests/e2e/: __init__.py  conftest.py  test_adf_fallback_e2e.py  test_adf_surgical_e2e.py  test_cache_optimization_journey.py  test_cli_error_handling.py  test_cli_force_operations.py  test_cli_sync_journey.py  test_conflict_markers_e2e.py  test_conflict_resolution_journey.py  test_confluence_deletion_journey.py  test_confluence_fetch_journey.py  test_confluence_move_journey.py  test_confluence_push_journey.py  test_create_parent_move_child.py  test_distinguish_move_delete.py  test_dryrun_operations.py  test_exclude_parent_e2e.py  test_force_operations_journey.py  test_line_break_roundtrip_e2e.py  test_local_deletion_journey.py  test_local_move_journey.py  test_macro_preservation_e2e.py  test_move_conflict.py  test_surgical_edit.py  test_surgical_update_journey.py
tests/fixtures/: __init__.py  adf_fixtures.py  cli_fixtures.py  conflict_scenarios.py  confluence_credentials.py  git_test_repos.py  sample_markdown.py  sample_pages.py
tests/helpers/: __init__.py  assertion_helpers.py  confluence_test_setup.py  git_test_utils.py  macro_test_utils.py
tests/integration/: __init__.py  conftest.py  test_adf_path_selection.py  test_baseline_merge_integration.py  test_config_persistence.py  test_conflict_resolver_integration.py  test_cql_ancestors_query.py  test_cql_queries.py  test_detector_cache_integration.py  (+5 more)
(+136 files in other folders)
